<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/dsp_settings_wm8994" >

    <CheckBoxPreference android:key="pref_wm8994_control_enable"
        android:title="@string/pref_wm8994_control_enable_title"
        android:summary="@string/pref_wm8994_control_enable_summary" />

    <!--  Speaker options -->
    <PreferenceCategory android:key="wm8994_internal_speaker_category"
        android:title="@string/category_wm8994_internal_speaker">

        <CheckBoxPreference android:key="pref_wm8994_speaker_tuning"
            android:title="@string/pref_wm8994_speaker_tuning_title"
            android:summary="@string/pref_wm8994_speaker_tuning_summary"
            android:dependency="pref_wm8994_control_enable" />

    </PreferenceCategory>

    <!--  Headset options -->
    <PreferenceCategory android:key="wm8994_headphone_amp_category"
        android:title="@string/category_wm8994_headphone_amp">
        <com.bel.android.dspmanager.preference.HeadsetAmplifierPreference
            android:key="headphone_amp"
            android:title="@string/pref_wm8994_headphone_amp_title"
            android:summary="@string/pref_wm8994_headphone_amp_summary"
            android:dialogTitle="@string/pref_wm8994_headphone_amp_dlg_title"
            android:dependency="pref_wm8994_control_enable" />
    </PreferenceCategory>

    <!--  Microphone recording options -->
    <PreferenceCategory android:key="wm8994_microphone_recording_category"
        android:title="@string/category_wm8994_microphone_recording">

        <com.bel.android.dspmanager.preference.SummariedListPreference
            android:entries="@array/microphone_recording_presets"
            android:dialogTitle="@string/pref_wm8994_microphone_recording_title"
            android:key="dsp.wm8994.microphone.recording"
            android:defaultValue="0"
            android:title="@string/pref_wm8994_microphone_recording_title"
            android:entryValues="@array/microphone_recording_presets_values"
            android:dependency="pref_wm8994_control_enable" />

    </PreferenceCategory>

    <!-- Signal Processing -->
    <PreferenceCategory android:key="wm8994_signal_processing_category"
        android:title="@string/category_wm8994_signal_processing">

        <CheckBoxPreference android:key="dsp.wm8994.bassboost.enable"
            android:title="@string/pref_wm8994_bass_boost_enable_title"
            android:summary="@string/pref_wm8994_bass_boost_enable_summary"
            android:dependency="pref_wm8994_control_enable" />

        <com.bel.android.dspmanager.preference.SummariedListPreference
            android:entries="@array/wm8994_bassboost_modes"
            android:dialogTitle="@string/pref_wm8994_bass_boost_preset_title"
            android:key="dsp.wm8994.bassboost.preset"
            android:defaultValue="0"
            android:title="@string/pref_wm8994_bass_boost_preset_title"
            android:entryValues="@array/wm8994_bassboost_modes_values"
            android:dependency="dsp.wm8994.bassboost.enable" />

        <com.bel.android.dspmanager.preference.BassBoostPreference
            android:key="dsp.wm8994.bassboost.gainrange"
            android:title="@string/pref_wm8994_bass_boost_title"
            android:summary="@string/pref_wm8994_bass_boost_summary"
            android:dialogTitle="@string/pref_wm8994_bass_boost_title"
            android:dependency="dsp.wm8994.bassboost.enable" />

        <CheckBoxPreference android:key="pref_wm8994_mono_downmix"
            android:title="@string/pref_wm8994_mono_downmix_title"
            android:summary="@string/pref_wm8994_mono_downmix_summary"
            android:dependency="pref_wm8994_control_enable" />

        <CheckBoxPreference android:key="pref_wm8994_stereo_expansion"
            android:title="@string/pref_wm8994_stereo_expansion_title"
            android:summary="@string/pref_wm8994_stereo_expansion_summary"
            android:dependency="pref_wm8994_control_enable" />

    </PreferenceCategory>

    <!--  D/AC, A/DC -->
    <PreferenceCategory android:key="wm8994_dac_config_category"
        android:title="@string/category_wm8994_dac_config">

        <CheckBoxPreference android:key="pref_wm8994_dac_direct"
            android:title="@string/pref_wm8994_dac_direct_title"
            android:summary="@string/pref_wm8994_dac_direct_summary"
            android:dependency="pref_wm8994_control_enable" />

        <CheckBoxPreference android:key="pref_wm8994_dac_osr128"
            android:title="@string/pref_wm8994_dac_osr128_title"
            android:summary="@string/pref_wm8994_dac_osr128_summary"
            android:dependency="pref_wm8994_control_enable" />

        <CheckBoxPreference android:key="pref_wm8994_adc_osr128"
            android:title="@string/pref_wm8994_adc_osr128_title"
            android:summary="@string/pref_wm8994_adc_osr128_summary"
            android:dependency="pref_wm8994_control_enable" />

    </PreferenceCategory>

    <!-- Codec settings -->
    <PreferenceCategory android:key="wm8994_codec_optimization_category"
        android:title="@string/category_wm8994_codec_optimization">

        <CheckBoxPreference android:key="pref_wm8994_fll_tuning"
            android:title="@string/pref_wm8994_fll_tuning_title"
            android:summary="@string/pref_wm8994_fll_tuning_summary"
            android:dependency="pref_wm8994_control_enable" />

    </PreferenceCategory>

</PreferenceScreen>
