<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/dsp_settings">
	<PreferenceCategory android:title="@string/pref_dsp_title">
		<CheckBoxPreference android:key="dsp.compression.enable"
			android:summaryOn="@string/pref_dsp_summary_on" android:summaryOff="@string/pref_dsp_summary_off"
			android:disableDependentsState="false" android:title="@string_pref_dsp_enable"></CheckBoxPreference>
		<com.bel.android.dspmanager.SummariedListPreference
			android:entries="@array/compression_modes" android:key="dsp.compression.mode"
			android:entryValues="@array/compression_modes_values" android:title="Select Effect Strength"
			android:dialogTitle="@sytring/dialog_effect" android:defaultValue="dsp.compression.ratio=1.414" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_equalizer_title">
		<CheckBoxPreference android:disableDependentsState="false"
			android:key="dsp.tone.enable" android:summaryOn="@string/pref_equalizer_summary_on"
			android:summaryOff="@string/pref_equalizer_summary_off" android:title="@string/pref_equalizer_enable"></CheckBoxPreference>
		<com.bel.android.dspmanager.SliderPreference
			android:key="dsp.tone.eq1" android:title="63 Hz"></com.bel.android.dspmanager.SliderPreference>
		<com.bel.android.dspmanager.SliderPreference
			android:key="dsp.tone.eq2" android:title="250 Hz"></com.bel.android.dspmanager.SliderPreference>
		<com.bel.android.dspmanager.SliderPreference
			android:key="dsp.tone.eq3" android:title="1 kHz"></com.bel.android.dspmanager.SliderPreference>
		<com.bel.android.dspmanager.SliderPreference
			android:key="dsp.tone.eq4" android:title="4 kHz"></com.bel.android.dspmanager.SliderPreference>
		<com.bel.android.dspmanager.SliderPreference
			android:key="dsp.tone.eq5" android:title="16 kHz"></com.bel.android.dspmanager.SliderPreference>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_headset_virtual_title">
		<CheckBoxPreference android:key="dsp.headphone.enable"
			android:disableDependentsState="false" android:summaryOn="@string/pref_headset_virtual_summary_on"
			android:summaryOff="@string/pref_headset_virtual_summary_off" android:title="@string/pref_headset_virtual_enable"></CheckBoxPreference>
		<com.bel.android.dspmanager.SummariedListPreference
			android:entries="@array/headphone_modes" android:title="@string/pref_room_title"
			android:key="dsp.headphone.mode" android:dialogTitle="@string/dialog_room"
			android:entryValues="@array/headphone_modes_values"
			android:defaultValue="dsp.headphone.deep=0;dsp.headphone.wide=0;dsp.headphone.level=-15" />
	</PreferenceCategory>

</PreferenceScreen>
